src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

body {
  font: 90%/1.5  "ProximaNovaRegular", "Lucida Grande", "Lucida Sans", Tahoma, Verdana, sans-serif;
  color: #000000;
}

.button-wrapper {
  padding: 20px;
  display: flex;
}

.search-params-wrapper {
  padding: 10px;
  margin: 10px;
  border: 1px solid black;
}

.wrapper {
  display: grid;
  grid-template-columns: repeat(auto-fit, 3);
  grid-gap: 0.5em;
  grid-auto-rows: 5;
  grid-row-gap: 1em;
  height: 400px;
}

.one {
  grid-column: 1;
  grid-row: 1;
}

.two {
  grid-column: 1;
  grid-row: 2;
}

.three {
  grid-column: 1;
  grid-row: 3;
}

.four {
  grid-column: 1;
  grid-row: 4;
}

.five {
  padding-top: 55px;
  grid-column: 2;
  grid-row: 3;
}

.six {
  grid-column: 2;
  grid-row: 2;
}

.seven {
  grid-column: 2;
  grid-row: 1;
}

label {
  height: 75%;
  padding: 4px;
  margin-top: 1px;
}

input {
  min-width: 70%;
  clear: both;
  border: 2px solid #000000;
  font-size: small;
}

input.below-label {
  float: initial;
  clear: initial;
}

#numberOfRecords {
  min-width: 67%;
}

select {
  min-width: 68%;
  float: right;
  clear: both;
  border: 2px solid #000000;
  font-size: small;
}

.smaller-font {
  font-size: xx-small;
}

.align-paragraph {
  text-align: center;
  margin-left: 6em;
  margin-top: .5em;
  margin-bottom: 0;
}

/* Not a standard hence all the name craziness https://css-tricks.com/almanac/selectors/p/placeholder/ */
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  font-weight: lighter;
  font-style: italic;
}
::-moz-placeholder { /* Firefox 19+ */
  font-weight: lighter;
  font-style: italic;
}
:-ms-input-placeholder { /* IE 10+ */
  font-weight: lighter;
  font-style: italic;
}
:-moz-placeholder { /* Firefox 18- */
  font-weight: lighter;
  font-style: italic;
}

button {
  max-width: 100%;
  padding: 4px;
  background-color: #E82620;
  border: 2px solid  #E82620;
  color: white;
  font-size: medium;
}

.button {
  background-color: #E82620;
  border: 2px solid  #E82620;
  padding: 10px;
  text-align: center;
  color: white;
  font-weight: bold;
  margin-right: 15px;
  width: 180px;
}

.download-button-wrapper {
  display: flex;
}

.mail-comment-button-wrapper {
  display: flex;
  padding: 10px 0;
}

.mail-comment-button-wrapper button {
  width: 205px;
  text-decoration: underline;
  font-weight: bold;
}

.mail-comment-button-wrapper textarea {
  margin-right: 13px;
  width: 200px;
}

button.danger {
  background-color: black;
  color: white;
  border-color: black;
  margin-left: 4px;
}

button.secondary {
  background-color: orange;
  color: white;
  border-color: orange;
}

.wrapperBelowMap {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 8px;
  padding-top: 16px;
  align-items: center;
}

.break {
  flex-basis: 100%;
  height: 0;
}

#searchResults {
  padding-right: 2em;
}

table {
  border: 2px solid #000000;
  border-collapse: collapse;
}

th {
  border-bottom: 2px solid #000000;
  border-left: 2px solid #000000;
  text-align: left;
  padding: 5px;
}

td {
  border-left: 2px solid #000000;
  text-align: left;
  padding: 5px;
}

#map {
  padding-top: 10px;
  height: 700px;
  width: auto;
}

#map div.gmnoprint.gm-bundled-control.gm-bundled-control-on-bottom > div:nth-child(1) > div {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.side-padding {
  padding: 0 4px
}
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 300px;
  height: 70px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}
.dropdown {
  position: relative;
  display: inline-block;
}
.dropbtn {
  float: right;
  background-color: #4CAF50;
  color: white;
  padding: 16px;
  font-size: 16px;
  border: none;
  cursor: pointer;
  width: 400px;
  height: 15px;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #f1f1f1}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
  display: block;
}

@media print {
  .pagebreak { display: block; page-break-before: auto; }
}

@media print {
  table {
      page-break-inside: avoid;
  }
}   

